--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
 
     <!-- === META TAGS PARA COMPARTILHAMENTO (Open Graph) - CORRIGIDO === -->
     <meta property="og:title" content="Solid Pré Moldados | Contato Rápido">
-    <meta property="og:description" content="Soluções ágeis e robustas para sua obra. Fale conosco.">
+    <meta property="og:description" content="Soluções ágeis e robustas para sua obra. Fale conosco via WhatsApp, telefone ou e-mail.">
     <meta property="og:image" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
     <meta property="og:image:alt" content="Logo da Solid Pré Moldados">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://solidpremoldados.github.io/">
     <meta property="og:site_name" content="Solid Pré Moldados">
+    <meta property="og:locale" content="pt_BR">
 
     <!-- Meta tags para Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Solid Pré Moldados | Contato Rápido">
-    <meta name="twitter:description" content="Soluções ágeis e robustas para sua obra. Fale conosco.">
+    <meta name="twitter:description" content="Soluções ágeis e robustas para sua obra. Fale conosco via WhatsApp, telefone ou e-mail.">
     <meta name="twitter:image" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
     <meta name="twitter:image:alt" content="Logo da Solid Pré Moldados">
 
