--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <!-- === META TAGS PARA COMPARTILHAMENTO (Open Graph) - CORRIGIDO === -->
     <meta property="og:title" content="Solid Pré Moldados | Contato Rápido">
     <meta property="og:description" content="Soluções ágeis e robustas para sua obra. Fale conosco via WhatsApp, telefone ou e-mail.">
-    <meta property="og:image" content="https://solidpremoldados.github.io/imagens/perfil-solid-branco.png">
-    <meta property="og:image:secure_url" content="https://solidpremoldados.github.io/imagens/perfil-solid-branco.png">
-    <meta property="og:image:alt" content="Solid Pré Moldados - Estrutura de concreto pré-moldado">
+    <meta property="og:image" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
+    <meta property="og:image:secure_url" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
+    <meta property="og:image:alt" content="Logo da Solid Pré Moldados">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
@@ -34,8 +34,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Solid Pré Moldados | Contato Rápido">
     <meta name="twitter:description" content="Soluções ágeis e robustas para sua obra. Fale conosco via WhatsApp, telefone ou e-mail.">
-    <meta name="twitter:image" content="https://solidpremoldados.github.io/imagens/perfil-solid-branco.png">
-    <meta name="twitter:image:alt" content="Solid Pré Moldados - Estrutura de concreto pré-moldado">
+    <meta name="twitter:image" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
+    <meta name="twitter:image:alt" content="Logo da Solid Pré Moldados">
 
     <!-- === ARQUIVOS DE ESTILO === -->
     <!-- CSS da Galeria Lightbox -->
