--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <meta name="author" content="Solid Pré Moldados">
 
     <!-- MELHORIA SEO: Adicionando URL Canônica -->
-    <link rel="canonical" href="https://solidpremoldados.github.io/"> <!-- Substitua pela URL final do seu site -->
+    <link rel="canonical" href="https://solidpremoldados.github.io/Cartao_de_Visita/">
 
-    <!-- MELHORIA SEO: Adicionando Favicon (coloque um arquivo favicon.ico na pasta principal) -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- MELHORIA SEO: Adicionando Favicon -->
+    <link rel="icon" href="imagens/logo-solid-premoldados.png" type="image/png">
+    <link rel="shortcut icon" href="imagens/logo-solid-premoldados.png" type="image/png">
 
-    <!-- === META TAGS PARA COMPARTILHAMENTO (Open Graph) - CORRIGIDO === -->
+    <!-- === META TAGS PARA COMPARTILHAMENTO (Open Graph) - OTIMIZADO === -->
     <meta property="og:title" content="Solid Pré Moldados | Contato Rápido">
     <meta property="og:description" content="Soluções ágeis e robustas para sua obra. Fale conosco via WhatsApp, telefone ou e-mail.">
     <meta property="og:image" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
@@ -26,16 +27,22 @@
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://solidpremoldados.github.io/">
+    <meta property="og:url" content="https://solidpremoldados.github.io/Cartao_de_Visita/">
     <meta property="og:site_name" content="Solid Pré Moldados">
     <meta property="og:locale" content="pt_BR">
 
     <!-- Meta tags para Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@solidpremoldados">
+    <meta name="twitter:creator" content="@solidpremoldados">
     <meta name="twitter:title" content="Solid Pré Moldados | Contato Rápido">
     <meta name="twitter:description" content="Soluções ágeis e robustas para sua obra. Fale conosco via WhatsApp, telefone ou e-mail.">
     <meta name="twitter:image" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
     <meta name="twitter:image:alt" content="Logo da Solid Pré Moldados">
+
+    <!-- Meta tags adicionais para WhatsApp -->
+    <meta property="og:image:url" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
+    <meta name="image" property="og:image" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
 
     <!-- === ARQUIVOS DE ESTILO === -->
     <!-- CSS da Galeria Lightbox -->
