--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <link rel="icon" href="imagens/logo-solid-premoldados.png" type="image/png">
     <link rel="shortcut icon" href="imagens/logo-solid-premoldados.png" type="image/png">
 
-    <!-- === META TAGS PARA COMPARTILHAMENTO (Open Graph) - OTIMIZADO === -->
+    <!-- === META TAGS PARA COMPARTILHAMENTO (Open Graph) - CORRIGIDO === -->
     <meta property="og:title" content="Solid Pré Moldados | Contato Rápido">
     <meta property="og:description" content="Soluções ágeis e robustas para sua obra. Fale conosco via WhatsApp, telefone ou e-mail.">
-    <meta property="og:image" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
-    <meta property="og:image:secure_url" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
+    <meta property="og:image" content="https://solidpremoldados.github.io/Cartao_de_Visita/imagens/logo-solid-premoldados.png">
+    <meta property="og:image:secure_url" content="https://solidpremoldados.github.io/Cartao_de_Visita/imagens/logo-solid-premoldados.png">
     <meta property="og:image:alt" content="Logo da Solid Pré Moldados">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -37,12 +37,12 @@
     <meta name="twitter:creator" content="@solidpremoldados">
     <meta name="twitter:title" content="Solid Pré Moldados | Contato Rápido">
     <meta name="twitter:description" content="Soluções ágeis e robustas para sua obra. Fale conosco via WhatsApp, telefone ou e-mail.">
-    <meta name="twitter:image" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
+    <meta name="twitter:image" content="https://solidpremoldados.github.io/Cartao_de_Visita/imagens/logo-solid-premoldados.png">
     <meta name="twitter:image:alt" content="Logo da Solid Pré Moldados">
 
     <!-- Meta tags adicionais para WhatsApp -->
-    <meta property="og:image:url" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
-    <meta name="image" property="og:image" content="https://solidpremoldados.github.io/imagens/logo-solid-premoldados.png">
+    <meta property="og:image:url" content="https://solidpremoldados.github.io/Cartao_de_Visita/imagens/logo-solid-premoldados.png">
+    <meta name="image" property="og:image" content="https://solidpremoldados.github.io/Cartao_de_Visita/imagens/logo-solid-premoldados.png">
 
     <!-- === ARQUIVOS DE ESTILO === -->
     <!-- CSS da Galeria Lightbox -->
